# huawei_yangdujun

./: .gitignore  build_hap.bat
android-source/yangdujun/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
android-source/yangdujun/app/src/main/: AndroidManifest.xml
android-source/yangdujun/app/src/main/cpp/: native-lib.c
android-source/yangdujun/app/src/main/res/drawable/: bg_blue_round.xml  bg_chat_round.xml  bg_corner_10_white_stroke.xml  bg_corner_12_deep_green.xml  bg_corner_12_green.xml  bg_corner_8_white.xml  bg_green_round.xml  bg_input_round.xml  bg_weather_gradient.xml  btn_bg.xml  custom_spinner_background.xml  custom_spinner_focused.xml  custom_spinner_normal.xml  humidity.xml  ic_back.xml  ic_status_offline.xml  ic_status_online.xml  login_input_line.xml  shape_answer_area.xml  shape_button.xml  shape_button_green.xml  shape_button_red.xml  shape_circle_btn.xml  shape_edittext.xml  shape_gradient_bg.xml  shape_tab_container.xml  shape_tab_selected.xml  spinner_bg.xml  spinner_dropdown_item_background.xml  spinner_dropdown_item_normal.xml  spinner_dropdown_item_pressed.xml  spinner_dropdown_item_selected.xml  spinner_popup_background.xml  tab_selected_background.xml  temp.xml
android-source/yangdujun/app/src/main/res/drawable-v24/: bg_add_area.xml  bg_avatar_border.xml  bg_btn_blue.xml  bg_btn_gray.xml  bg_btn_green.xml  bg_btn_red.xml  bg_chat_box.xml  bg_dialog_white.xml  bg_mine_ios_like.xml  bg_mine_item_card.xml  bg_row_white.xml  chip_bg.xml  chip_text.xml  circle.xml  divider_8.xml  ic_chevron_right.xml
android-source/yangdujun/app/src/main/res/layout/: activity_add_greenhouse.xml  activity_alarm_detail.xml  activity_alarm_handle.xml  activity_alarm_record.xml  activity_deepseek.xml  activity_device_monitor.xml  activity_edit_profile.xml  activity_feedback.xml  activity_greenhouse_list.xml  activity_history_analysis.xml  activity_real_time_analysis.xml  activity_settings.xml  activity_weather.xml  alarm_threshold.xml  custom_spinner_dropdown_item.xml  custom_spinner_item.xml  device_manage.xml  dialog_ai_loading_sheet.xml  dialog_ai_suggestion_sheet.xml  dialog_change_password.xml  dialog_confirm_remove.xml  dialog_logout.xml  greenhouse_homepage.xml  item_alarm_record.xml  item_alarm_record_manage.xml  item_device.xml  item_empty_alarm.xml  item_greenhouse.xml  item_mine_card.xml  item_mine_row.xml  item_setting_arrow.xml  item_setting_switch.xml  layout_bottom_nav.xml  login.xml  login2.xml  manage.xml  mine_item_card.xml  minepage.xml  newpassword.xml  (+8 more)
(+131 files in other folders)
